refatorando telas feedback e criando objAvaliacaoFeedback

--- a/Sistema/Interface/Pages/PagesUsuario/Feedback/feedback.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Feedback/feedback.html
@@ -16,11 +16,11 @@
                     <img src="../../../Public/image/usuario.png" alt="icone-usuario" height="70em">
                 </button>
                 <h1 id="nm-user">
-                    Bruno Gomes
+                    <!-- nome do usuario -->
                 </h1>
             </div>
             <div class="container-voltar">
-                <a href="#" class="btn-voltar">
+                <a href="../Home/homeusuario.html" class="btn-voltar">
                     <img src="../../../Public/image/arrow-left.png" alt="icone voltar" height="55em">
                 </a>
             </div>
@@ -38,13 +38,13 @@
                     <div class="bloco-eventos">
                         <div class="container-buttons">
                             <div class="bloco-button">
-                                <a href="#" class="evento">Minhas avaliações</a>
+                                <a href="../MinhasAvaliacoes/meusfeedbacks.html" class="evento">Minhas avaliações</a>
                             </div>
                             <div class="bloco-button">
                                 <a href="../FazerAvaliacao/avaliacao.html" class="evento">Fazer avaliação</a>
                             </div>
                             <div class="bloco-button">
-                                <a href="#" class="evento">Ver avaliações</a>
+                                <a href="../AvaliacoesUsuarios/outrasavaliacoes.html" class="evento">Ver avaliações</a>
                             </div>
                         </div>
                     </div>
@@ -65,5 +65,6 @@
             </div>
         </footer>
     </div>
+    <script src="../Feedback/feedback.js" type="module"></script>
 </body>
 </html>
