--- a/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Home/homeusuario.html
@@ -32,7 +32,7 @@
                     <div class="container-eventos">
                         <a href="../../Agendar/agendar.html">Agendar</a>
                         <a href="../ConsultarAgendamentos/consultaragendamentos.html">Meus agendamentos</a>
-                        <a href="#">Feedback</a>
+                        <a href="../Feedback/feedback.html">Feedback</a>
                     </div>
                     <div class="logoff">
                         <button id="btn-logoff" class="btn-logoff">Log Off</button>
