--- a/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
@@ -17,11 +17,11 @@
                     <img src="../../../Public/image/usuario.png" alt="icone-usuario" height="70em">
                 </a>
                 <h1 id="nm-user" style="margin-left: 1%;">
-                    Bruno Gomes
+                    <!-- nome do usuario -->
                 </h1>
             </div>
             <div class="container-voltar">
-                <a href="../Home/homeusuario.html" class="btn-voltar">
+                <a href="../Feedback/feedback.html" class="btn-voltar">
                     <img src="../../../Public/image/arrow-left.png" alt="icone voltar" height="55em">
                 </a>
             </div>
@@ -32,7 +32,7 @@
                     <div class="container-guia">
                         <h1 class="titulo">Avaliações escritas até o momento</h1>
                     </div>
-                    <div class="container-avaliacoes">
+                    <div class="container-avaliacoes" id="container-avaliacoes">
                         <div class="bloco-avaliacao">
                             <div class="avaliacao">
                                 <div class="eventos-datapublicacao">
@@ -80,5 +80,6 @@
             <div class="incorporacao">&copy;TestCars Inc. 2022</div>
         </footer>
     </div>
+    <script src="./meusfeedbacks.js" type="module"></script>
 </body>
 </html>
