--- a/Sistema/Interface/Pages/PagesUsuario/FazerAvaliacao/avaliacao.html
+++ b/Sistema/Interface/Pages/PagesUsuario/FazerAvaliacao/avaliacao.html
@@ -16,11 +16,11 @@
                     <img src="../../../Public/image/usuario.png" alt="icone-usuario" height="70em">
                 </a>
                 <h1 id="nm-user" style="margin-left: 1%;">
-                    Bruno Gomes
+                    <!-- nome do usuario -->
                 </h1>
             </div>
             <div class="container-voltar">
-                <a href="../Home/homeusuario.html" class="btn-voltar">
+                <a href="../Feedback/feedback.html" class="btn-voltar">
                     <img src="../../../Public/image/arrow-left.png" alt="icone voltar" height="55em">
                 </a>
             </div>
@@ -62,6 +62,7 @@
             </div>
         </footer>
     </div>
+    <script src="./avaliacao.js" type="module"></script>
     <script src="../../../Public/javascript/estrelafeedback.js"></script>
 </body>
 </html>
