refatorando arquivo meusfeedbacks.js

--- a/Sistema/Interface/Pages/PagesUsuario/EditarAvaliacao/editarfeedback.html
+++ b/Sistema/Interface/Pages/PagesUsuario/EditarAvaliacao/editarfeedback.html
@@ -20,7 +20,7 @@
                 </h1>
             </div>
             <div class="container-voltar">
-                <a href="../Home/homeusuario.html" class="btn-voltar">
+                <a id="btnVoltar" href="../MinhasAvaliacoes/meusfeedbacks.html" class="btn-voltar">
                     <img src="../../../Public/image/arrow-left.png" alt="icone voltar" height="55em">
                 </a>
             </div>
@@ -70,5 +70,6 @@
             </div>
         </footer>
     </div>
+    <script src="./editarfeedback.js" type="module"></script>
 </body>
 </html>
