--- a/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
@@ -33,7 +33,7 @@
                         <h1 class="titulo">Avaliações escritas até o momento</h1>
                     </div>
                     <div class="container-avaliacoes" id="container-avaliacoes">
-                        <div class="bloco-avaliacao">
+                        <!-- <div class="bloco-avaliacao">
                             <div class="avaliacao">
                                 <div class="eventos-datapublicacao">
                                     <div class="eventos">
@@ -53,24 +53,24 @@
                                 </div>
                                 <div class="conteudo-feedback">
                                     <p class="feedback">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatum aspernatur, eveniet harum impedit beatae sit libero, deserunt atque, iste similique quia. Incidunt tenetur rerum nihil error inventore nostrum porro!
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque placeat labore quibusdam ea impedit praesentium, eius quaerat quas eveniet ipsam expedita tempore et esse magnam rerum quidem! Ea, pariatur maiores.
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit facere molestias dolorum blanditiis porro culpa alias fuga iste labore, vitae commodi incidunt, error nemo ab quos! Consequatur dolores eaque deleniti.
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis voluptatum aspernatur, eveniet harum impedit beatae sit libero, deserunt atque, iste similique quia.
                                     </p>
                                 </div>
                                 <div class="nota-feedback">
                                     <div class="nota-estrela">
                                         <div class="estrelas">
-                                            ★
-                                            ★
-                                            ★
-                                            ★
-                                            ★
+                                            <ul id="list-star" class="lista-estrelas">
+                                                <li>★</li>
+                                                <li>★</li>
+                                                <li>★</li>
+                                                <li>★</li>
+                                                <li>★</li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
