--- a/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
@@ -33,6 +33,7 @@
                         <h1 class="titulo">Avaliações escritas até o momento</h1>
                     </div>
                     <div class="container-avaliacoes" id="container-avaliacoes">
+                        <!-- estrutura das tags do bloco de avaliacao -->
                         <!-- <div class="bloco-avaliacao">
                             <div class="avaliacao">
                                 <div class="eventos-datapublicacao">
