refatorando editarfeedback.js

--- a/Sistema/Interface/Pages/PagesUsuario/EditarAvaliacao/editarfeedback.html
+++ b/Sistema/Interface/Pages/PagesUsuario/EditarAvaliacao/editarfeedback.html
@@ -36,11 +36,11 @@
                     <div class="container-estrelas">
                         <div class="estrelas">
                             <ul id="nota-usuario" class="lista-notas">
-                                <li>★</li>
-                                <li>★</li>
-                                <li>★</li>
-                                <li>★</li>
-                                <li>★</li>
+                                <li class="star">★</li>
+                                <li class="star">★</li>
+                                <li class="star">★</li>
+                                <li class="star">★</li>
+                                <li class="star">★</li>
                             </ul>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="evento">
-                    <button class="btn-salvar">Salvar alterações</button>
+                    <button class="btn-salvar" id="btn-salvar">Salvar alterações</button>
                 </div>
             </div>
         </div>
@@ -73,5 +73,6 @@
         </footer>
     </div>
     <script src="./editarfeedback.js" type="module"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
