implementando metodo ver-avaliacoes pagesUsuario

--- a/Sistema/Interface/Pages/PagesUsuario/AvaliacoesUsuarios/outrasavaliacoes.html
+++ b/Sistema/Interface/Pages/PagesUsuario/AvaliacoesUsuarios/outrasavaliacoes.html
@@ -31,8 +31,8 @@
                     <h1 style="margin-left: 2%;">Avaliações de outros usuários</h1>
                 </div>
                 <div class="bloco-feedback">
-                    <div class="feedbacks">
-                        <div class="avaliacao">
+                    <div id="feedbacks" class="feedbacks">
+                        <!-- <div class="avaliacao">
                             <div class="bloco-informacoesusuario">
                                 <div class="usuario">
                                     <p class="nome-usuario">Bruno Gomes</p>
@@ -50,10 +50,17 @@
                                 </p>
                             </div>
                             <div class="bloco-nota">
-                                <span class="estrelas">★★★★★</span>
+                                <div class="bloco-estrelas">
+                                    <ul class="estrelas">
+                                        <li>★</li>
+                                        <li>★</li>
+                                        <li>★</li>
+                                        <li>★</li>
+                                        <li>★</li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                        
+                        </div> -->
                     </div>
                 </div>
             </div>
