--- a/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhasAvaliacoes/meusfeedbacks.html
@@ -82,5 +82,6 @@
         </footer>
     </div>
     <script src="./meusfeedbacks.js" type="module"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
