--- a/Sistema/Interface/Pages/PagesUsuario/EditarConta/editconta.html
+++ b/Sistema/Interface/Pages/PagesUsuario/EditarConta/editconta.html
@@ -20,32 +20,24 @@
                     <div class="bloco-nascimento">
                         <label for="datanascimento">Data de nascimento:</label>
                         <div class="select-nasc">
-                            <select name="dia" id="datanascimento" class="selecao">
-                                <option>Dia</option>
-                            </select>
-                            <select name="mes" id="datanascimento" class="selecao">
-                                <option>Mês</option>
-                            </select>
-                            <select name="ano" id="datanascimento" class="selecao">
-                                <option>Ano</option>
-                            </select>
+                            <input type="date" id="inpdatanascimento" class="selecao" min="2022">
                         </div>
                     </div>
                     <div class="bloco-senha">
                         <label for="senhaantiga">Senha antiga:</label>
-                        <input type="text" id="senhaantiga" class="inpuser">
+                        <input type="password" id="senhaantiga" class="inpuser">
                     </div>
                     <div class="bloco-senha">
                         <label for="novasenha">Nova senha:</label>
-                        <input type="text" id="novasenha" class="inpuser">
+                        <input type="password" id="novasenha" class="inpuser">
                     </div>
                     <div class="bloco-senha">
                         <label for="confirmar">Confirmar senha:</label>
-                        <input type="text" id="confirmar" class="inpuser">
+                        <input type="password" id="confirmar" class="inpuser">
                     </div>
                     <div class="bloco-eventos">
                         <a href="../MinhaConta/minhaconta.html" class="btn-voltar">Voltar</a>
-                        <button class="btn-update">Atualizar Informações</button>
+                        <button class="btn-update" id="btn-atualizar">Atualizar Informações</button>
                     </div>
                 </div>
             </div>
@@ -59,5 +51,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="./editconta.js" type="module"></script>
 </body>
 </html>
