--- a/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.html
+++ b/Sistema/Interface/Pages/PagesUsuario/MinhaConta/minhaconta.html
@@ -56,7 +56,7 @@
                                 </span>
                             </div>
                             <div class="bloco-excluirconta">
-                                <button class="btn-excluir">
+                                <button id="btn-excluir" class="btn-excluir">
                                     Excluir conta
                                 </button>
                             </div>
@@ -76,8 +76,8 @@
                         <!-- São dois tipos de informacoes que ficarão nessa div, as informacoes sobre as avaliacoes e sobre os agendamentos -->
                         <div class="informacoes-atividades" id="info-atividades">
                             <!-- <div class="container-agendamentos">
-                                    <table class="table">
-                                        <thead class="coluna">
+                                <table class="table">
+                                    <thead class="coluna">
                                             <tr class="info-column">
                                                 <th>Carro</th>
                                                 <th>Data do teste</th>
@@ -94,9 +94,9 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                            </div> -->
-                            <!-- <div class="container-avaliacoes">
-                                <div class="avaliacao">
+                                </div> -->
+                                <!-- <div class="container-avaliacoes">
+                                    <div class="avaliacao">
                                     <div class="comentario">
                                         <textarea cols="30" rows="5" readonly>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur placeat nemo eius nesciunt autem, deserunt magni, architecto mollitia rem iste quia asperiores sapiente! At dolorum, eum saepe quibusdam dolorem aliquid?lo</textarea>
                                     </div>
@@ -132,5 +132,7 @@
         </footer>
     </div>
     <script src="./minhaconta.js" type="module"></script>
+    <script src="./excluirconta.js" type="module"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
