implementando funcionalidade desmarcar-testdrive pagesUsuario

--- a/Sistema/Interface/Pages/PagesUsuario/DetalhesTestDrive/detalhestestdrive.html
+++ b/Sistema/Interface/Pages/PagesUsuario/DetalhesTestDrive/detalhestestdrive.html
@@ -12,9 +12,9 @@
     <div class="container-master">
         <div class="container-usuario">
             <div class="container-meu-perfil">
-                <button class="btn-perfil">
+                <a href="../MinhaConta/minhaconta.html" class="btn-perfil">
                     <img src="../../../Public/image/usuario.png" alt="icone usuario" height="75em">
-                </button>
+                </a>
                 <h1 style="margin-left: 2%;" id="nm-user"></h1>
             </div>
         </div>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="container-desmarcar">
-                        <button class="btn-desmarcar">Desmarcar Test Drive</button>
+                        <button class="btn-desmarcar" id="btn-desmarcar">Desmarcar Test Drive</button>
                     </div>
                 </div>
             </div>
