--- a/Sistema/Interface/Pages/PagesUsuario/Feedback/feedback.html
+++ b/Sistema/Interface/Pages/PagesUsuario/Feedback/feedback.html
@@ -12,9 +12,9 @@
     <div class="container-master">
         <div class="cabecalho">
             <div class="container-usuario">
-                <button class="meu-perfil">
+                <a href="../MinhaConta/minhaconta.html" class="meu-perfil">
                     <img src="../../../Public/image/usuario.png" alt="icone-usuario" height="70em">
-                </button>
+                </a>
                 <h1 id="nm-user">
                     <!-- nome do usuario -->
                 </h1>
