subindo pagina CarrosPopulares pagesGerente

--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
@@ -23,7 +23,7 @@
                         <a href="../../Agendar/agendar.html">Agendar</a>
                         <a href="#">Avaliações</a>
                         <a href="../ConsultarAgendamentos/consultaragendamentos.html">Consultar agendamentos</a>
-                        <a href="#">Negócios</a>
+                        <a href="../Negocios/negocios.html">Negócios</a>
                     </div>
                     <div class="logoff">
                         <button id="btn-logoff" class="btn-logoff">Log Off</button>
