--- a/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
+++ b/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
@@ -18,7 +18,7 @@
                 <a href="#tests_semana" class="link">Tests da última semana</a>
             </div>
             <div class="bloco-voltar">
-                <a href="#" class="a-voltar">
+                <a href="../Home/homegerente.html" class="a-voltar">
                     <img src="../../../Public/image/arrow-left.png" height="50em" alt="botao para voltar">
                 </a>
             </div>
@@ -29,7 +29,7 @@
                     <div class="info-func">
                         <h2 class="titulo">Carros mais populares</h2>
                         <p class="desc">Veja por aqui os carros que os usuários mais optam por fazer agendamentos.</p>
-                        <button class="btn-carros">Ver carros</button>
+                        <a href="../CarrosPopulares/carrospopulares.html" class="btn-carros">Ver carros</a>
                     </div>
                     <div class="img-ilustracao">
                         <picture class="picture-carro">
@@ -50,7 +50,7 @@
                     <div class="info-func-clientes">
                         <h2 class="titulo">Melhores clientes</h2>
                         <p class="desc">Busque pelos clientes que mais fazem agendamentos em seu sistema, mostrando um gráfico que exibe os mais ativos no seu site.</p>
-                        <button class="btn-carros">Exibir Clientes</button>
+                        <a href="#" class="btn-carros">Exibir Clientes</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                     <div class="info-func-modelos">
                         <h2 class="titulo" style="color: white;">Modelos mais populares</h2>
                         <p class="desc" style="color: white;">Consulte os modelos de carros mais populares da concessonária.</p>
-                        <button class="btn-modelos">Consultar Modelos</button>
+                        <a href="#" class="btn-modelos">Consultar Modelos</a>
                     </div>
                     <div class="img-ilustracao-modelos">
                         <picture class="picture-picape">
@@ -80,7 +80,7 @@
                     <div class="info-func-tests">
                         <h2 class="titulo" style="color: white;">Agendamentos realizados na semana</h2>
                         <p class="desc">Consulte por aqui os agendamentos de test drive realizados na última semana.</p>
-                        <button class="btn-tests">Relatório da Semana</button>
+                        <a href="#" class="btn-tests">Relatório da Semana</a>
                     </div>
                 </div>
             </div>
