--- a/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
+++ b/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
@@ -59,7 +59,7 @@
                     <div class="info-func-modelos">
                         <h2 class="titulo" style="color: white;">Modelos mais populares</h2>
                         <p class="desc" style="color: white;">Consulte os modelos de carros mais populares da concessonária.</p>
-                        <a href="#" class="btn-modelos">Consultar Modelos</a>
+                        <a href="../ModelosPopulares/modelospopulares.html" class="btn-modelos">Consultar Modelos</a>
                     </div>
                     <div class="img-ilustracao-modelos">
                         <picture class="picture-picape">
