--- a/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
+++ b/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
@@ -50,7 +50,7 @@
                     <div class="info-func-clientes">
                         <h2 class="titulo">Melhores clientes</h2>
                         <p class="desc">Busque pelos clientes que mais fazem agendamentos em seu sistema, mostrando um gráfico que exibe os mais ativos no seu site.</p>
-                        <a href="#" class="btn-carros">Exibir Clientes</a>
+                        <a href="../MelhoresClientes/melhoresclientes.html" class="btn-carros">Exibir Clientes</a>
                     </div>
                 </div>
             </div>
