subindo pagina avaliacoes pagesGerente

--- a/Sistema/Interface/Pages/PagesGerente/MelhoresClientes/melhoresclientes.html
+++ b/Sistema/Interface/Pages/PagesGerente/MelhoresClientes/melhoresclientes.html
@@ -15,7 +15,7 @@
             <div class="links">
                 <a href="../CarrosPopulares/carrospopulares.html">Carros populares</a>
                 <a href="../ModelosPopulares/modelospopulares.html">Modelos populares</a>
-                <a href="#">Testes realizados na semana</a>
+                <a href="../TestesdaSemana/testesdasemana.html">Testes realizados na semana</a>
             </div>
             <div class="container-voltar">
                 <a href="../Negocios/negocios.html">
@@ -44,5 +44,6 @@
         </footer>
     </div>
     <script src="./melhoresclientes.js" type="module"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
