--- a/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
+++ b/Sistema/Interface/Pages/PagesGerente/Negocios/negocios.html
@@ -80,7 +80,7 @@
                     <div class="info-func-tests">
                         <h2 class="titulo" style="color: white;">Agendamentos realizados na semana</h2>
                         <p class="desc">Consulte por aqui os agendamentos de test drive realizados na última semana.</p>
-                        <a href="#" class="btn-tests">Relatório da Semana</a>
+                        <a href="../TestesdaSemana/testesdasemana.html" class="btn-tests">Relatório da Semana</a>
                     </div>
                 </div>
             </div>
