--- a/Sistema/Interface/Pages/PagesGerente/CarrosPopulares/carrospopulares.html
+++ b/Sistema/Interface/Pages/PagesGerente/CarrosPopulares/carrospopulares.html
@@ -7,9 +7,7 @@
     <title>Negocios - Carros mais populares</title>
     <link rel="shortcut icon" href="../../../Public/image/traffic-jam.ico" type="image/x-icon">
     <link rel="stylesheet" href="./carrospopulares.css">
-    
-    <script src="https://cdn.anychart.com/releases/8.0.1/js/anychart-core.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.0.1/js/anychart-pie.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-base.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container-master">
@@ -17,7 +15,7 @@
             <div class="links">
                 <a href="../ModelosPopulares/modelospopulares.html">Modelos populares</a>
                 <a href="../MelhoresClientes/melhoresclientes.html">Melhores clientes</a>
-                <a href="#">Testes realizados na semana</a>
+                <a href="../TestesdaSemana/testesdasemana.html">Testes realizados na semana</a>
             </div>
             <div class="container-voltar">
                 <a href="../Negocios/negocios.html">
