--- a/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
+++ b/Sistema/Interface/Pages/PagesGerente/Home/homegerente.html
@@ -21,7 +21,7 @@
                 <div class="bloco-eventos">
                     <div class="eventos">
                         <a href="../../Agendar/agendar.html">Agendar</a>
-                        <a href="#">Avaliações</a>
+                        <a href="../Avaliacoes/avaliacoes.html">Avaliações</a>
                         <a href="../ConsultarAgendamentos/consultaragendamentos.html">Consultar agendamentos</a>
                         <a href="../Negocios/negocios.html">Negócios</a>
                     </div>
